...
      isError: false,
      errorText: null,
    });
  };

  renderItem = ({item}) => {
    const testId = 'BikeListItem' + this.itemCount;
    this.itemCount++;
    // Reset here as list may be re-rendered w/o call to render()
    if (this.itemCount == this.state.bikeData.length) {
      this.itemCount = 0;
    }

...
        </View>
      );
    } else if (this.state.bikeData.length > 0) {
      mainView = flatListWrapper(
        this.state.bikeData,
        this.renderItem,
        'BikesList',
      );
    } else if (this.state.fetchState != FETCH_IN_PROGRESS) {
      mainView = (
        <View style={CommonStyles.fetchFailedView}>
          <Text style={CommonStyles.emptyStateText}>You have no bikes.{"\n"}Add at least one bike to your Strava account in order to add components and maintenance tasks.</Text>
        </View>
...
