...
        </View>
      );
    } else if (this.state.componentData.length > 0) {
      mainView = flatListWrapper(
        this.state.componentData,
        this.renderItem,
        'ComponentsList',
      );
    } else if (this.state.fetchState != FETCH_IN_PROGRESS) {
      mainView = (
        <View style={CommonStyles.fetchFailedView}>
          <Text style={CommonStyles.emptyStateText}>
            {this.bike.title} has no components.{'\n'}Click on the add button to
...
          </Text>
        </View>
      );
    }

    return (
      <View style={{flex: 1}} testID="ComponentsView">
        {mainView}

        {AddButton(() => {
          this.navigation.navigate('Add Component', {
            isNewComponent: true,
            bike: this.bike,
...
